# uid_labs

./: .gitignore
lab1/LAB1/ArchiverApp/: ArchiverApp.slnx
lab1/LAB1/ArchiverApp/ArchiverApp/: ArchiverApp.csproj  Form1.Designer.cs  Form1.cs  Program.cs
lab1/LAB1/ArchiverApp/ArchiverApp/Properties/: AssemblyInfo.cs  Settings.Designer.cs  (+1 more)
lab1/LAB1/ArchiverWPF/: ArchiverWPF.slnx
lab1/LAB1/ArchiverWPF/ArchiverWPF/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
lab2/UID_LAB2/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
lab3/UID_LAB3/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
lab4/UID_LAB4/: settings.gradle.kts
lab4/UID_LAB4/app/: build.gradle.kts
lab4/UID_LAB4/gradle/wrapper/: gradle-wrapper.properties
lab5/UID_LAB5/: package-lock.json
lab5/UID_LAB5/src/: App.css  App.js
lab5/UID_LAB5/src/components/: TaskList.jsx
lab6/UID_LAB6/: package-lock.json  package.json
lab6/UID_LAB6/src/: App.css  App.js
lab6/UID_LAB6/src/components/: Navbar.jsx  TaskInput.jsx  TaskItem.jsx
lab6/UID_LAB6/src/pages/: About.jsx  Home.jsx  Stats.jsx
zalik/: .gitignore  App.js  README.md  app.json  package.json
zalik/src/components/: AnswerButton.js  ExpenseCard.js  ProgressDots.js  TimerBar.js  TripCard.js
zalik/src/context/: QuizContext.js  TravelContext.js
zalik/src/data/: questions.js
zalik/src/screens/: AddExpenseScreen.js  AddTripScreen.js  DebtScreen.js  HomeScreen.js  QuizScreen.js  ResultScreen.js  TripDetailScreen.js
zalik/src/utils/: debtCalculator.js  formatters.js
(+10 files in other folders)
